--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
   php-fpm:
     strategy:
       matrix:
-        container-tag: [ "8.2", "8.1", "8.0" ]
+        container-tag: [ "8.2", "8.1", "8.0", "7.4" ]
     runs-on: ubuntu-latest
     steps:
       - name: Login to Docker Hub
@@ -38,4 +38,4 @@ jobs:
           push: true
           build-args: |
             SOURCE_TAG=php:${{ matrix.container-tag }}-fpm
-          tags: foun10/eden-phpfpm:${{ matrix.container-tag }}
+          tags: foun10/eden-phpfpm:test-${{ matrix.container-tag }}
