--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,11 @@ jobs:
           platforms: linux/amd64,linux/arm64
           build-args: |
             SOURCE_TAG=php:fpm
-          tags: foun10/eden-phpfpm:8.2.0
+          tags: foun10/eden-phpfpm:8.1
   php-fpm-versions:
     strategy:
       matrix:
-        container-tag: [ "8.2.0", "8.1", "8.0", "7.4", "7.3" ]
+        container-tag: [ "8.1", "8.0", "7.4", "7.3" ]
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
