--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,12 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           build-args: |
-            SOURCE_TAG=php:8.1-fpm
+            SOURCE_TAG=php:8.3-fpm
           tags: foun10/eden-phpfpm:latest
   php-fpm-versions:
     strategy:
       matrix:
-        container-tag: [ "8.2", "8.1", "8.0", "7.4", "7.3" ]
+        container-tag: [ "8.3", "8.2", "8.1", "8.0", "7.4", "7.3" ]
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
