--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,11 @@ jobs:
             SOURCE_TAG=php:8.3-fpm
           tags: foun10/eden-phpfpm:latest
   php-fpm-versions:
+    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         container-tag: [ "8.3", "8.2", "8.1", "8.0", "7.4", "7.3" ]
-    runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
