--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        container-tag: [ "8.3", "8.2", "8.1", "8.0", "7.4", "7.3" ]
+        container-tag: [ "8.4", "8.3", "8.2", "8.1", "8.0", "7.4", "7.3" ]
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
