--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,30 +6,21 @@ on:
       - 'master'
 
 jobs:
-  php-fpm-latest:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push latest
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          platforms: linux/amd64,linux/arm64
-          build-args: |
-            SOURCE_TAG=php:8.3-fpm
-          tags: foun10/eden-phpfpm:latest
   php-fpm-versions:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        container-tag: [ "8.4", "8.3", "8.2", "8.1", "8.0", "7.4", "7.3" ]
+        container: [
+          {source: "8.4", tags: "foun10/eden-phpfpm:latest,foun10/eden-phpfpm:8.4"},
+          {source: "8.4", tags: "foun10/eden-phpfpm:8.4"},
+          {source: "8.3", tags: "foun10/eden-phpfpm:8.3"},
+          {source: "8.2", tags: "foun10/eden-phpfpm:8.2"},
+          {source: "8.1", tags: "foun10/eden-phpfpm:8.1"},
+          {source: "8.0", tags: "foun10/eden-phpfpm:8.0"},
+          {source: "7.4", tags: "foun10/eden-phpfpm:7.4"},
+          {source: "7.3", tags: "foun10/eden-phpfpm:7.3"}
+        ]
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -38,11 +29,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push ${{ matrix.container-tag }}
+      - name: Build and push ${{ matrix.container.tag }}
         uses: docker/build-push-action@v4
         with:
           push: true
           platforms: linux/amd64,linux/arm64
           build-args: |
-            SOURCE_TAG=php:${{ matrix.container-tag }}-fpm
-          tags: foun10/eden-phpfpm:${{ matrix.container-tag }}
+            SOURCE_TAG=php:${{ matrix.container.soruce }}-fpm
+          tags: ${{ matrix.container.tags }}
