--- a/config/extensions/xdebug.ini
+++ b/config/extensions/xdebug.ini
@@ -1,10 +1,11 @@
 zend_extension=xdebug.so
 
 [xdebug]
-xdebug.mode=develop,coverage,debug,profile
-xdebug.idekey=${XDEBUG_IDE_KEY}
-xdebug.start_with_request=yes
-xdebug.log=/dev/stdout
-xdebug.log_level=0
-xdebug.client_port=9003
-xdebug.client_host=host.docker.internal
+xdebug.mode=${XDEBUG_MODE:-off}
+xdebug.idekey=${XDEBUG_IDE_KEY:-docker}
+xdebug.start_with_request=${XDEBUG_START_WITH_REQUEST:-no}
+xdebug.log=${XDEBUG_LOG:-/dev/stdout}
+xdebug.log_level=${XDEBUG_LOG_LEVEL:-0}
+xdebug.client_host=${XDEBUG_CLIENT_HOST:-host.docker.internal}
+xdebug.client_port=${XDEBUG_CLIENT_PORT:-9003}
+xdebug.max_nesting_level=${XDEBUG_MAX_NESTING_LEVEL:-1024}
